basic implementation of TorrentEngineSettings and TorrentEngineManager
changes:
* implementations or TorrentEngine are now completely abstract
* TorrentEngineManager uses reflection to load TorrentEngine impls