@@ -46,9 +46,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
-                <configuration>
-                    <argLine>--add-opens org.mediacat/org.mediacat.torrentengine=ALL-UNNAMED</argLine>
-                </configuration>
             </plugin>
             <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -57,7 +54,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.mediacat.torrentengine.Main</mainClass>
+                            <mainClass>org.mediacat.torrentengine.org.mediacat.Main</mainClass>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
